[package]
name = "rust-game"
version = "0.1.0"
authors = ["eccyan <g00.eccyan@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[[bin]]
name = "game-server"
path = "src/server.rs"

[[bin]]
name = "game-client"
path = "src/client.rs"

[[bin]]
name = "world"
path = "src/world.rs"

[dependencies]
tonic = "0.4.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.7"
# Only necessary if using Protobuf well-known types:
prost-types = "0.7"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }
